tests/baselines/reference/parserArrowFunctionExpression12(target=es3).errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,17): error TS2304: Cannot find name 'd'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,17): error TS8010: Type annotations can only be used in TypeScript files.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,22): error TS2304: Cannot find name 'e'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(2,1): error TS1005: ':' expected.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,17): error TS2304: Cannot find name 'd'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,22): error TS2304: Cannot find name 'e'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(2,1): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js (5 errors) ====
    a ? (b) => (c): d => e // Legal JS
    ~
!!! error TS2304: Cannot find name 'a'.
                    ~
!!! error TS2304: Cannot find name 'd'.
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                         ~
!!! error TS2304: Cannot find name 'e'.
    
    
!!! error TS1005: ':' expected.
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts (4 errors) ====
    a ? (b) => (c): d => e
    ~
!!! error TS2304: Cannot find name 'a'.
                    ~
!!! error TS2304: Cannot find name 'd'.
                         ~
!!! error TS2304: Cannot find name 'e'.
    
    
!!! error TS1005: ':' expected.